Add Rspec and Vitest

--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -52,4 +52,8 @@ group :development, :test do
 
   gem "faker"
   gem "graphiql-rails"
+  gem "rspec-rails"
+  gem "factory_bot_rails"
+  gem "database_cleaner-active_record"
+  gem "shoulda-matchers"
 end
